# Space_Duels

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  resources.qrc  version.h.in
.qt/: QtDeploySupport.cmake
src/: Card.cpp  Card.h  MenuWindow.cpp  MenuWindow.h  Round.cpp  Round.h  Ship.cpp  Ship.h  ShipView.cpp  ShipView.h  bots.cpp  bots.h  globals.cpp  globals.h  init_ncurses.cpp  main.cpp  utils.cpp  utils.h
versions/Space_Duels-0.0.1/: Card.cpp  Card.h  Ship.cpp  Ship.h  Space_Duels  bots.cpp  globals.h  main.cpp  utils.cpp
versions/Space_Duels-0.0.2/: Card.cpp  Card.h  Ship.cpp  Ship.h  Space_Duels  bots.cpp  bots.h  globals.cpp  init_ncurses.cpp  init_ncurses.h  utils.cpp  utils.h
versions/Space_Duels-0.0.3/: Card.cpp  Card.h  Ship.cpp  Ship.h  bots.cpp  bots.h  gloabls.cpp  globals.cpp  globals.h  utils.cpp
versions/Space_Duels-0.0.4/: Ship.cpp  Ship.h  Space_Duels  bots.h  main.cpp  utils.cpp  utils.h
